--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class = "row" style="padding-top: 40px" >
       <div class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light" id="nav">
-    
+    		<a class="navbar-brand" href= "index.html" style="font-size: 30px; color: #575556;"> Sophia Dominguez</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -170,9 +170,6 @@
               </li>
               <li class="nav-item active">
                <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070; padding-top: 20px"> About Me! </a>
-              </li>
-              <li>
-              	<a class="navbar-brand" href= "index.html" style="font-size: 30px; padding-left: 20px;color: #575556;"> Sophia Dominguez</a>
               </li>
               <li class="nav-item">
                 <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070; padding-top: 20px"> Projects <span class = "sr-only">(current)</span></a>
