--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
   <div class="container jumbotron  ">
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href="borrowingApp.html"> <img src="coverPage2.jpg"  class="project1 img-thumbnail filter-imageL"></a> <br> <br> <br> 
-  	<a href = "plannigo.html"> <img class = "project4 img-thumbnail filter-imageR" src="PlannigoCover.jpg"><br> <br> <br>
-  	<a href = "spotify.html"> <img class = "project3 img-thumbnail filter-imageL" src="Untitled-6.jpg"> 
+  	<a href=""> <img src="Rectangle 12.png"  class="project1 img-thumbnail filter-imageL"></a> <br> <br> <br> 
+  	<a href = "borrowingApp.html"> <img class = "project4 img-thumbnail filter-imageR" src="Group 1.png"><br> <br> <br>
+  	<a href = "plannigo.html"> <img class = "project3 img-thumbnail filter-imageL" src="PlannigoCover.jpg"> 
   	 </div>
 
   </div>
