--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
 
   <section>
   	<div class="container jumbotron align-items-center">
-  		<h1>Hi I'm <span class="myName">Sophia Dominguez </span><br>a <span class="school">UX designer </span><br>a third year at <span class = "UC"> UC San Diego. </span></h1>
+  		<h1>Hi I'm <span class="myName">Sophia Dominguez </span><br>a <span class="school">UX designer </span><br>a fourth year at <span class = "UC"> UC San Diego. </span></h1>
   	</div>
   </section>
 
   <div class="container jumbotron  ">
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href=""> <img src="Rectangle 12.png"  class="project1 img-thumbnail filter-imageL"></a> <br> <br> <br> 
-  	<a href = "borrowingApp.html"> <img class = "project4 img-thumbnail filter-imageR" src="Group 1.png"><br> <br> <br>
+  	<a href=""> <img src="Rectangle 2.png"  class="project1 img-thumbnail filter-imageL"></a> <p style="font-family: roboto; font-size: 22px"> prototyped and testing a potential new application </p>
+  	<a href = "borrowingApp.html"> <img class = "project4 img-thumbnail filter-imageR" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left: left; margin-right: auto;" > created a mobile app</p><br> <br>
   	<a href = "plannigo.html"> <img class = "project3 img-thumbnail filter-imageL" src="PlannigoCover.jpg"> 
   	 </div>
 
