--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -127,39 +127,128 @@
     margin-left: auto;
     margin-right: auto;
     }
+          .look{
+      height: 55px;
+      font-family: Segoe UI;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 35px;
+      }
+      .project1{
+      width:50%;
+      height: 275px;
+      
+      }
+      .project1:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+     
+      .project3
+      {
+      width: 50%;
+      height: 275px;
+      }
+      .project3:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+    .project4
+      {
+      width:50%;
+      height: 275px;
+      }
+      .project4:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+
+
+
+      .name{
+        color: black;
+      }
+      .school{
+        color: #B78727;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 300;
+      }
+      .UC{
+        color: #274DB7;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight:300;
+      }
+      .myName{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 700;
+      }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+/*
+      .jumbotron {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+      margin-bottom: 0;
+      background-color: #fffaff;
+    }
+*/
+
+
+    @media (min-width: 768px) {
+      .jumbotron {
+        padding-top: 6rem;
+        padding-bottom: 6rem;
+      }
+    }
+    #nav ul {
+        margin: auto;
+         overflow: hidden;
+         width: 60%;
+    }
     </style>
 
     <title> Borrow N' Go</title>
   </head>
   <body style = "margin-bottom: 100px">
-        <div class = "rec"></div>
+   <div class = "rec"></div>
     <div class = "container">
-      <div class = "row" style="padding-top: 30px" >
-        <div class="col-12">
-          <nav class="navbar navbar-expand-lg navbar-light">
+    <div class = "row" style="padding-top: 40px" >
+      <div class="col-12">
+        <nav class="navbar navbar-expand-lg navbar-light" id="nav">
+        <a class="navbar-brand" href= "index.html" style="font-size: 30px; color: #575556;"> Sophia Dominguez</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <a class="navbar-brand" href= "index.html" style="font-size: 25px"> Sophia Dominguez</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                 <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070"> About Me! </a>
-                </li>
-                <li class="nav-item">
-                  <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class = "nav-item nav-link" target = "_blank" href = "RESUME_SD.pdf" style = "padding-left: 20px; color: #707070"> Resume </a>
-                </li>
-              </ul>
-            </div>
-
-          </nav>
-        </div>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+               <li class="nav-item active">
+                  <a class = "nav-item nav-link" href = "index.html" style = "padding-left: 20px; color: #707070;"> Home </a>
+              </li>
+              <li class="nav-item active">
+               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070;"> About Me! </a>
+              </li>
+              <li class="nav-item">
+                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070;""> Projects <span class = "sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class = "nav-item nav-link" target = "_blank" href = "RESUME_SD.pdf" style = "padding-left: 20px; color: #707070;"> Resume </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
+    </div>
   </div>
   
   <div class="jumbotron container">
