--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <style type="text/css">
       body{
-        background-color: #CCA69B;
+        background-color: rgba(204, 166, 155, 0.8);
       }
       .rec{
       position: absolute;
@@ -123,7 +123,7 @@
 		  padding-bottom: 3rem;
 		 position: center;
 		  margin-bottom: 0;
-		  background-color: #CCA69B;
+		  background-color: rgba(204, 166, 155, 0.0);
 		}
 
 		@media (min-width: 768px) {
@@ -134,7 +134,7 @@
 		}
 		.jumbotron h1 {
   			font-weight: 400;
-  			font-size: 85px;
+  			font-size: 80px;
   			font-family: Roboto;
       		font-style: normal;
       		font-weight: 100;
@@ -213,10 +213,27 @@
   <div class="container jumbotron  ">
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href=""> <img src="Rectangle 2.png"  class="project1 img-thumbnail filter-imageL"></a> <p style="font-family: roboto; font-size: 22px"> prototyped and testing a potential new application </p>
-  	<a href = "borrowingApp.html"> <img class = "project4 img-thumbnail filter-imageR" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left: left; margin-right: auto;" > created a mobile app</p><br> <br>
-  	<a href = "plannigo.html"> <img class = "project3 img-thumbnail filter-imageL" src="PlannigoCover.jpg"> 
-  	 </div>
+	<div class="row">
+	  	<div class= "col-sm">
+	        <a href="dexcom.html"> <img src="Rectangle 2.png"  class=" img-thumbnail img-fluid"></a> <p style="font-family: roboto; font-size: 22px"> prototyped and testing a potential new application </p> 
+	    </div>
+
+	    <div class="col-sm">
+	    	<a href = "borrowingApp.html"> <img class = "img-thumbnail img-fluid" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left:auto; margin-right: right;" > created a clohtes borrowing mobile app</p>
+	    </div>
+    
+	</div>
+	<div class="row">
+		<div class="col-sm">
+    		<a href = "plannigo.html"> <img class = "img-thumbnail img-fluid" src="PlannigoCover.jpg"> 
+    	</div>
+    	<div class="col-sm">
+    		<a href = "spotify.html"> <img class = "img-thumbnail img-fluid" src="Untitled-6.jpg"> 
+    	</div>
+	</div>
+
+  	
+  </div>
 
   </div>
 
