--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	    </div>
 
 	    <div class="col-sm">
-	    	<a href = "borrowingApp.html"> <img class = "img-thumbnail img-fluid" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left:auto; margin-right: right;" > created a clohtes borrowing mobile app</p>
+	    	<a href = "borrowingApp.html"> <img class = "img-thumbnail img-fluid" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left:auto; margin-right: right;" > created a clothes borrowing mobile app</p>
 	    </div>
     
 	</div>
