--- a/dexcom.html
+++ b/dexcom.html
@@ -206,7 +206,7 @@
       padding-bottom: 3rem;
       position: center;
       margin-bottom: 0;
-      background-color: rgba(110, 179, 63, 0.8); 
+      background-color: #fffaff; 
     }
 
     @media (min-width: 768px) {
@@ -274,23 +274,37 @@
     </div>
   </div>
 
-  <div class="jumbotron container">
+<!--  <div class="jumbotron container">
     <h1>Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
-    <p>Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br>
-      Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br> 
-       Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> </div>--> </p>
-  </div>
- <!--<div style="background-color: rgba(110, 179, 63, 0.8); width: 100%; height: 100%; min-width: 1000px; min-height: 600px; padding: 0; margin: 0; ">
-      <h1 style="font-weight: 400; font-size: 60px; font-family: Roboto; font-style: normal; font-weight: 100; padding-top: 10rem; padding-bottom: 3rem; position: center; margin-bottom: 0; padding-left: 110px"> Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
-      <p style="padding-left: 50px">Timeline: Summer ‘20 Design Sprint <br>-->
+    <p>Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br> Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> </div> -->
 
-       <!--   Type: Industry Challenge ‍<br>
+    <div style="background-color: rgba(110, 179, 63, 0.8); width: 100%; height: 100%; min-width: 1000px; min-height: 600px; padding: 0; margin: 0; ">
+      <h1 style="font-weight: 400; font-size: 60px; font-family: Roboto; font-style: normal; font-weight: 100; padding-top: 8rem; padding-bottom: 3rem; position: center; margin-bottom: 0; padding-left: 110px"> Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
+      <p style="padding-left: 50px">Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br>
+        Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> 
+    </div> 
 
-          Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br> -->
-
-         <!-- Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> </div>-->
-      
-          <!--<article style = "padding:10px;float: left; width:40%">
+    <div class="container jumbotron">
+      <h4>Overview</h4>
+      <p>Working with Dexcom, a team of students and I worked together to create the blueprint for a new application to support access to glucose data. My team and I conducted research, identifying and ranking key features needed in this new application. We developed prototypes for multiple platforms and presented them as a product roadmap. </p>
+    <p>For the first half of the program my team and I:
+      <ul style="        width: 1000px;
+        font-family: Roboto;
+        font-size: 19px;
+        line-height: 30px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;">
+        <li>created a competitive analysis to see what was currently on the market and how could Dexcom’s solution stand out</li>
+        <li>presented to Dexcom UX design, UX research, product management, marketing, and human factors teams weekly</li>
+        <li>presented our research findings and early sketches of the applications to over 30 Dexcom stakeholders after the first 5 weeks of the program</li>
+    </ul></p> <br>
+    <p>
+      The second half of the program we focused on initiation and prototyping. Based on our research, we picked the features with the highest priority to implement in a minimal viable product. We created a flowchart to confirm with Dexcom stakeholders the structure of the application. From there we created prototypes, making iterations based on insights we gained from our user tests. We meet with developers of different platforms to discuss the feasibility of our designs. We made sure to work with the product management and the human factors team to ensure the prototype was in line with Dexcom’s existing applications in terms of onboarding and how potential errors were to be handled. In the end, we conducted a Kano Model survey to learn about any interest in future features. <br>At the end of the 10 weeks, we were able to present our MVP prototype and make recommendations for future versions. 
+    </p>
+    </div>
+        <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
       </article> -->
 
