--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <style type="text/css">
       body{
-        background-color: rgba(204, 166, 155, 0.2);
+        background-color: #FFFFF6;
       }
       .rec{
       position: absolute;
@@ -93,17 +93,20 @@
       	font-family: Roboto;
       	font-style: normal;
       	font-weight: 300;
+      	font-size: 60px;
       }
       .UC{
       	color: #274DB7;
       	font-family: Roboto;
       	font-style: normal;
       	font-weight:300;
+      	font-size: 60px;
       }
       .myName{
       	font-family: Roboto;
       	font-style: normal;
       	font-weight: 700;
+      	font-size: 60px;
       }
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
@@ -203,10 +206,9 @@
       </div>
     </div>
   </div>
-
   <section>
   	<div class="container jumbotron align-items-center">
-  		<h1>Hi I'm <span class="myName">Sophia Dominguez </span><br>a <span class="school">UX designer </span><br>a fourth year at <span class = "UC"> UC San Diego. </span></h1>
+  		<h1>Hello <br><span class="myName">My name is Sophia</span><br><span class="school"> a UX designer </span><br> <span style = "font-size: 60px;">a fourth year at </span> <span class = "UC"> UC San Diego. </span></h1>
   	</div>
   </section>
 
