--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
 		@media (min-width: 768px) {
 		  .jumbotron {
-		    padding-top: 6rem;
-		    padding-bottom: 6rem;
+		    padding-top: 3rem;
+		    padding-bottom: 3rem;
 		  }
 		}
 		.jumbotron h1 {
@@ -217,20 +217,28 @@
 
 	<div class="row">
 	  	<div class= "col-sm">
-	        <a href="dexcom.html"> <img src="Rectangle 2.png"  class=" img-thumbnail img-fluid"></a> <p style="font-family: roboto; font-size: 22px"> prototyped and testing a potential new application </p> 
+	        <a href="index.html"> <img src="pal.png"  class=" img-fluid" style="height: 275px"></a> <p style="font-family: roboto; font-size: 22px"> </p> 
 	    </div>
-
-	    <div class="col-sm">
-	    	<a href = "borrowingApp.html"> <img class = "img-thumbnail img-fluid" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left:auto; margin-right: right;" > created a clothes borrowing mobile app</p>
+	    <div class= "col-sm">
+	        <p style="font-family: roboto; font-size: 22px"> Living with Diabetes: <br> What we share beyond Data <br><br> T1Pal Design Intern</p> 
+	    </div>
+    
+	</div>
+	<div class="row">
+	  	<div class= "col-sm">
+	       <p style="font-family: roboto; font-size: 22px"> blah blah blah</p>
+	    </div>
+	    <div class= "col-sm">
+	        <a href="dexcom.html"> <img src="Frame 2.png"  class=" img-fluid"></a> <p style="font-family: roboto; font-size: 22px"> </p> 
 	    </div>
     
 	</div>
 	<div class="row">
 		<div class="col-sm">
+	    	<a href = "borrowingApp.html"> <img class = "img-thumbnail img-fluid" src="Group 2.png"> </a> <p style="font-family: roboto; font-size: 22px; display: block; margin-left:auto; margin-right: right;" > created a clothes borrowing mobile app</p>
+	    </div>
+		<div class="col-sm">
     		<a href = "plannigo.html"> <img class = "img-thumbnail img-fluid" src="PlannigoCover.jpg"> 
-    	</div>
-    	<div class="col-sm">
-    		<a href = "spotify.html"> <img class = "img-thumbnail img-fluid" src="Untitled-6.jpg"> 
     	</div>
 	</div>
 
