--- a/dexcom.html
+++ b/dexcom.html
@@ -7,6 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <style type="text/css">
       body{
         background-color: #fffaff;
@@ -216,8 +220,8 @@
       }
     }
     .jumbotron h1 {
-        font-weight: 400;
-        font-size: 85px;
+        font-weight: 500;
+        font-size: 60px;
         font-family: Roboto;
           font-style: normal;
           font-weight: 100;
@@ -276,11 +280,11 @@
 
 <!--  <div class="jumbotron container">
     <h1>Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
-    <p>Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br> Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> </div> -->
+    <p>Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team Roadmap:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br> Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> background-color: rgba(110, 179, 63, 0.8); width: 100%; height: 100%; min-width: 1000px; min-height: 600px; padding: 0; margin: 0; ">
+      <h1 style="font-weight: 400; font-size: 60px; font-family: Roboto; font-style: normal; font-weight: 100; padding-top: 8rem; padding-bottom: 3rem; position: center; margin-bottom: 0; padding-left: 110px</div> -->
 
-    <div style="background-color: rgba(110, 179, 63, 0.8); width: 100%; height: 100%; min-width: 1000px; min-height: 600px; padding: 0; margin: 0; ">
-      <h1 style="font-weight: 400; font-size: 60px; font-family: Roboto; font-style: normal; font-weight: 100; padding-top: 8rem; padding-bottom: 3rem; position: center; margin-bottom: 0; padding-left: 110px"> Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
-      <p style="padding-left: 50px">Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br>
+    <div class = "jumbotron  container align-items-center" style="background-color: rgba(110, 179, 63, 0.8);"> <h1>Dexcom X UC San Diego The Design Lab </h1> <br> <br> <br> <br>
+      <p>Timeline: Summer ‘20 Design Sprint <br> Type: Industry Challenge ‍<br> Team:  Stacey Chin, Sophia Dominguez, Aaron Sun, and David Yi Yang‍ <br>
         Mentors: Karen Yeung (Dexcom), Lars Mueller, and Heidi Rataj</p> 
     </div> 
 
